nodex-cli/tests/snapshots/behaviour__graph__query_dependents_adr_beta.snap
---
source: nodex-cli/tests/behaviour.rs
expression: observed
---
exit: 0
{
  "data": {
    "dependents": [
      {
        "hops": 1,
        "id": "guide-index",
        "kind": "guide",
        "path": "docs/index.md",
        "status": "active",
        "title": "Index",
        "via": [
          {
            "relation": "references",
            "source": "guide-index",
            "target": {
              "id": "adr-beta",
              "type": "resolved"
            }
          }
        ]
      }
    ],
    "relations": [],
    "root_id": "adr-beta"
  },
  "ok": true,
  "snapshot": {
    "unbuildable": 0,
    "unfollowed": 0,
    "verification": "membership"
  }
}
