nodex-cli/tests/snapshots/behaviour__graph__query_issues.snap
---
source: nodex-cli/tests/behaviour.rs
expression: observed
---
exit: 0
{
  "data": {
    "orphans": [
      {
        "created": null,
        "id": "generic-legacy",
        "kind": "generic",
        "path": "docs/legacy.md",
        "status": "active",
        "title": "Legacy note"
      },
      {
        "created": "2026-01-02",
        "id": "guide-index",
        "kind": "guide",
        "path": "docs/index.md",
        "status": "active",
        "title": "Index"
      },
      {
        "created": "2026-03-01",
        "id": "runbook-deploy",
        "kind": "runbook",
        "path": "docs/runbooks/deploy.md",
        "status": "active",
        "title": "Deploy"
      }
    ],
    "rule_coverage": [
      {
        "rule_id": "acyclic_relation",
        "subjects": 0,
        "unit": "edges",
        "unjudged": 0
      },
      {
        "rule_id": "cross_field",
        "subjects": 8,
        "unit": "nodes",
        "unjudged": 0
      },
      {
        "rule_id": "field_enum",
        "subjects": 8,
        "unit": "nodes",
        "unjudged": 0
      },
      {
        "rule_id": "field_parse",
        "subjects": 8,
        "unit": "nodes",
        "unjudged": 0
      },
      {
        "rule_id": "field_type",
        "subjects": 0,
        "unit": "nodes",
        "unjudged": 0
      },
      {
        "rule_id": "orphan",
        "subjects": 6,
        "unit": "nodes",
        "unjudged": 0
      },
      {
        "rule_id": "parse_failure",
        "subjects": 8,
        "unit": "files",
        "unjudged": 0
      },
      {
        "rule_id": "required_field",
        "subjects": 8,
        "unit": "nodes",
        "unjudged": 0
      },
      {
        "rule_id": "stale_review",
        "subjects": 6,
        "unit": "nodes",
        "unjudged": 0
      },
      {
        "rule_id": "superseded_reference",
        "subjects": 4,
        "unit": "edges",
        "unjudged": 0
      }
    ],
    "skipped_rules": [],
    "stale": [
      {
        "days_since": 164,
        "id": "readme-readme",
        "kind": "readme",
        "path": "docs/readme.md",
        "reviewed": "2026-01-02",
        "status": "active",
        "title": "Readme"
      },
      {
        "days_since": 162,
        "id": "adr-gamma",
        "kind": "adr",
        "path": "docs/decisions/gamma.md",
        "reviewed": "2026-01-04",
        "status": "active",
        "title": "Gamma"
      },
      {
        "days_since": 106,
        "id": "runbook-deploy",
        "kind": "runbook",
        "path": "docs/runbooks/deploy.md",
        "reviewed": "2026-03-01",
        "status": "active",
        "title": "Deploy"
      }
    ],
    "summary": {
      "by_category": {
        "excluded_target": 1,
        "unresolved_edge": 1,
        "violation_orphan": 3,
        "violation_required_field": 1,
        "violation_stale_review": 3
      },
      "total": 8
    },
    "unresolved_edges": [
      {
        "cause": "missing",
        "location": "L5",
        "raw_target": "../does-not-exist.md",
        "reason": "nothing in scope resolves this target",
        "relation": "references",
        "severity": "warning",
        "source": "adr-gamma",
        "source_path": "docs/decisions/gamma.md"
      },
      {
        "cause": "excluded_from_scope",
        "location": "frontmatter:covers",
        "policy_name": "excluded_target",
        "raw_target": "nodex.toml",
        "reason": "target exists on disk but is excluded from scope",
        "relation": "covers",
        "severity": "info",
        "source": "guide-index",
        "source_path": "docs/index.md"
      }
    ],
    "violations": [
      {
        "details": {
          "type": "orphan"
        },
        "message": "no document references this one; link it, set `orphan_ok: true`, or add its kind to [detection].orphan_ok_kinds",
        "node_id": "generic-legacy",
        "path": "docs/legacy.md",
        "rule_id": "orphan",
        "severity": "warning"
      },
      {
        "details": {
          "type": "orphan"
        },
        "message": "no document references this one; link it, set `orphan_ok: true`, or add its kind to [detection].orphan_ok_kinds",
        "node_id": "guide-index",
        "path": "docs/index.md",
        "rule_id": "orphan",
        "severity": "warning"
      },
      {
        "details": {
          "type": "orphan"
        },
        "message": "no document references this one; link it, set `orphan_ok: true`, or add its kind to [detection].orphan_ok_kinds",
        "node_id": "runbook-deploy",
        "path": "docs/runbooks/deploy.md",
        "rule_id": "orphan",
        "severity": "warning"
      },
      {
        "details": {
          "field": "created",
          "type": "required_field"
        },
        "message": "missing required field: created",
        "node_id": "generic-legacy",
        "path": "docs/legacy.md",
        "rule_id": "required_field",
        "severity": "error"
      },
      {
        "details": {
          "days": 162,
          "threshold_days": 90,
          "type": "stale_review"
        },
        "message": "not reviewed for 162 days (threshold: 90 days)",
        "node_id": "adr-gamma",
        "path": "docs/decisions/gamma.md",
        "rule_id": "stale_review",
        "severity": "warning"
      },
      {
        "details": {
          "days": 164,
          "threshold_days": 90,
          "type": "stale_review"
        },
        "message": "not reviewed for 164 days (threshold: 90 days)",
        "node_id": "readme-readme",
        "path": "docs/readme.md",
        "rule_id": "stale_review",
        "severity": "warning"
      },
      {
        "details": {
          "days": 106,
          "threshold_days": 90,
          "type": "stale_review"
        },
        "message": "not reviewed for 106 days (threshold: 90 days)",
        "node_id": "runbook-deploy",
        "path": "docs/runbooks/deploy.md",
        "rule_id": "stale_review",
        "severity": "warning"
      }
    ]
  },
  "ok": true,
  "snapshot": {
    "unbuildable": 0,
    "unfollowed": 0,
    "verification": "membership"
  }
}
