nodex-cli/tests/snapshots/behaviour__graph__query_neighborhood_guide_index.snap
---
source: nodex-cli/tests/behaviour.rs
expression: observed
---
exit: 0
{
  "data": {
    "depth": 1,
    "nodes": [
      {
        "depth": 0,
        "id": "guide-index",
        "kind": "guide",
        "path": "docs/index.md",
        "status": "active",
        "title": "Index"
      },
      {
        "depth": 1,
        "id": "adr-beta",
        "kind": "adr",
        "path": "docs/decisions/beta.md",
        "status": "active",
        "title": "Beta"
      },
      {
        "depth": 1,
        "id": "adr-gamma",
        "kind": "adr",
        "path": "docs/decisions/gamma.md",
        "status": "active",
        "title": "Gamma"
      },
      {
        "depth": 1,
        "id": "guide-notes",
        "kind": "guide",
        "path": "docs/notes.md",
        "status": "active",
        "title": "Notes"
      }
    ],
    "seed": "guide-index"
  },
  "ok": true,
  "snapshot": {
    "unbuildable": 0,
    "unfollowed": 0,
    "verification": "membership"
  }
}
