nodex-cli/tests/snapshots/behaviour__graph__query_nodes.snap
---
source: nodex-cli/tests/behaviour.rs
expression: observed
---
exit: 0
{
  "data": {
    "items": [
      {
        "id": "adr-alpha",
        "kind": "adr",
        "path": "docs/decisions/alpha.md",
        "status": "superseded",
        "title": "Alpha"
      },
      {
        "id": "adr-beta",
        "kind": "adr",
        "path": "docs/decisions/beta.md",
        "status": "active",
        "title": "Beta"
      },
      {
        "id": "adr-gamma",
        "kind": "adr",
        "path": "docs/decisions/gamma.md",
        "status": "active",
        "title": "Gamma"
      },
      {
        "id": "generic-legacy",
        "kind": "generic",
        "path": "docs/legacy.md",
        "status": "active",
        "title": "Legacy note"
      },
      {
        "id": "guide-index",
        "kind": "guide",
        "path": "docs/index.md",
        "status": "active",
        "title": "Index"
      },
      {
        "id": "guide-notes",
        "kind": "guide",
        "path": "docs/notes.md",
        "status": "active",
        "title": "Notes"
      },
      {
        "id": "readme-readme",
        "kind": "readme",
        "path": "docs/readme.md",
        "status": "active",
        "title": "Readme"
      },
      {
        "id": "runbook-deploy",
        "kind": "runbook",
        "path": "docs/runbooks/deploy.md",
        "status": "active",
        "title": "Deploy"
      }
    ],
    "total": 8
  },
  "ok": true,
  "snapshot": {
    "unbuildable": 0,
    "unfollowed": 0,
    "verification": "membership"
  }
}
