nodex-cli/tests/snapshots/behaviour__graph__query_orphans.snap
---
source: nodex-cli/tests/behaviour.rs
expression: observed
---
exit: 0
{
  "data": {
    "items": [
      {
        "created": null,
        "id": "generic-legacy",
        "kind": "generic",
        "path": "docs/legacy.md",
        "status": "active",
        "title": "Legacy note"
      },
      {
        "created": "2026-01-02",
        "id": "guide-index",
        "kind": "guide",
        "path": "docs/index.md",
        "status": "active",
        "title": "Index"
      },
      {
        "created": "2026-03-01",
        "id": "runbook-deploy",
        "kind": "runbook",
        "path": "docs/runbooks/deploy.md",
        "status": "active",
        "title": "Deploy"
      }
    ],
    "total": 3
  },
  "ok": true,
  "snapshot": {
    "unbuildable": 0,
    "unfollowed": 0,
    "verification": "membership"
  }
}
