nodex-cli/tests/snapshots/behaviour__graph__query_similar.snap
---
source: nodex-cli/tests/behaviour.rs
expression: "observe(dir.path(), argv)"
---
exit: 2
{
  "error": {
    "code": "INVALID_ARGUMENT",
    "message": "error: the following required arguments were not provided:\n  <--id <ID>|--title <TITLE>>\n\nUsage: nodex query similar <--id <ID>|--title <TITLE>>\n\nFor more information, try '--help'.\n"
  },
  "ok": false
}
