nodex-cli/tests/snapshots/behaviour__graph__report.snap
---
source: nodex-cli/tests/behaviour.rs
expression: observed
---
exit: 0
{
  "data": {
    "generated": [
      "graph.json",
      "GRAPH.md"
    ],
    "output_dir": "<staged>/_index"
  },
  "ok": true,
  "warnings": [
    {
      "code": "scope_coverage",
      "message": "\"docs/legacy.md\" has kind \"generic\" but no identity.kind_rules glob matches it; add a rule covering this path (map it to \"generic\" explicitly if intended)"
    }
  ]
}
