nodex-cli/tests/snapshots/behaviour__graph__status.snap
---
source: nodex-cli/tests/behaviour.rs
expression: observed
---
exit: 0
{
  "data": {
    "graph_path": "_index/graph.json",
    "snapshot_nodex_version": "0.45.1",
    "snapshot_schema_version": 13,
    "state": "current",
    "supported_schema_version": 13
  },
  "ok": true
}
